[bumpversion]
current_version = 0.5.2
commit = True

[bumpversion:file:setup.py]

[bumpversion:file:docs/conf.py]

[bumpversion:file:pynetworks/__init__.py]

[metadata]
name = pynetworks
author = Thomas Breydo
author_email = tbreydo@gmail.com
description = A Python implementation for networks of nodes.
long_description = file: docs/README.rst
long_description_content_type = text/x-rst
license = GNU
url = https://github.com/thomasbreydo/pynetworks

[options]
include_package_data = true
