[bumpversion]
current_version = 0.6.1
commit = True

[metadata]
name = pynetworks
version = attr: pynetworks.__version__
author = Thomas Breydo
author_email = tbreydo@gmail.com
description = A Python implementation for networks of nodes.
long_description = file: docs/README.rst
long_description_content_type = text/x-rst
project_urls = 
	Documentation = https://pynetworks.readthedocs.io
	Code = https://github.com/thomasbreydo/pynetworks
classifiers = 
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find:
include_package_data = true

[bumpversion:file:pynetworks/__init__.py]
